# convert-to-django-template.py

./: .gitignore  MANIFEST.in  README.md  file.html  main.py  pyproject.toml  requirements.txt  setup.py
django_template_converter/: __init__.py
django_template_converter/core/: __init__.py  converter.py
django_template_converter/gui/: __init__.py  window.py
django_template_converter/utils/: __init__.py  helpers.py
screenshots/: .gitkeep
tests/: __init__.py  test_converter.py
